--- a/site/plugins/epub-module/blueprints/tabs/epub.yml
+++ b/site/plugins/epub-module/blueprints/tabs/epub.yml
@@ -50,7 +50,7 @@ columns:
             type: headline
             label: 
               en: "Cover"
-              de: "Deckblatt"
+              de: "Titelbild"
             numbered: false
           epubHasCoverImage:
             type: toggle
@@ -78,6 +78,43 @@ columns:
             template: cover
             when: 
               epubHasCoverImage: true
+          epubCoverWidth:
+            type: number
+            label: 
+              en: "Maximum Width"
+              de: "Maximale Breite"
+            width: 1/2
+            min: 10
+            max: 3000
+            after: "px"
+            default: 600
+            when: 
+              epubHasCoverImage: true
+          epubCoverHeight:
+            type: number
+            label: 
+              en: "Maximum Height"
+              de: "Maximale Höhe (max)"
+            width: 1/2
+            min: 10
+            max: 3000
+            after: "px"
+            default: 600
+            when: 
+              epubHasCoverImage: true
+          epubCoverQuality:
+            type: range
+            label: 
+              en: "Image Quality"
+              de: "Bildqualität"
+            step: 10
+            min: 10
+            max: 100
+            default: 80
+            before: min
+            after: max
+            when: 
+              epubHasCoverImage: true
   - width: 1/4
     sections:
       epubImageSettings:
@@ -86,8 +123,8 @@ columns:
           epubImageHeadline:
             type: headline
             label: 
-              en: "Image Conversion"
-              de: "Bildkonvertierung"
+              en: "Content Images"
+              de: "Inhaltsbilder"
             numbered: false
           epubImageWidth:
             type: number
