--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "dev": "parcel watch src/index.js --no-source-maps -d ./",
-    "build": "parcel build src/index.js --no-source-maps --experimental-scope-hoisting -d ./"
+    "devEpubModule": "parcel watch site/plugins/epub-module/src/index.js --no-source-maps -d ./site/plugins/epub-module/",
+    "buildEpubModule": "parcel build site/plugins/epub-module/src/index.js --no-source-maps --experimental-scope-hoisting -d ./site/plugins/epub-module/"
   },
   "posthtml": {
     "recognizeSelfClosing": true
