Add downloadlink and tooltip prop

--- a/site/blueprints/tabs/dashboard.yml
+++ b/site/blueprints/tabs/dashboard.yml
@@ -55,4 +55,7 @@ columns:
             help: 
               en: ""
               de: ""
-            icon: upload 
+            icon: upload
+            tooltip: 
+              en: ""
+              de: ""
