--- a/site/blueprints/pages/document.yml
+++ b/site/blueprints/pages/document.yml
@@ -28,23 +28,8 @@ columns:
 
   - width: 1/3
     sections:
-      documentInfo:
-        type: fields
-        fields:
-          documentStatus:
-            type: select
-            label: 
-              en: "Status"
-              de: "Status"
-            default: '✗'
-            required: false
-            options: 
-              '✗': Being edited
-              '?': Requires check
-              '✓': Completed
-
       documentSettings:
-        extends: sections/epub/docment
+        extends: sections/epub/document
         
       documentFiles:
         headline: 
